--- a/stylus/form.styl
+++ b/stylus/form.styl
@@ -13,3 +13,8 @@
 		& + label
 			&:before
 				@extend .c-icon--radio--on
+
+//jade 例
+//input.search-checkbox(type="checkbox" name="a" id="check01" checked)
+//label.search-checkbox__label(for="check01")
+//	|hoge
